# metacircular-js

./: .gitignore  Cargo.toml  README.md  index.ts  package.json
driver/: .eslintrc.yml  index.ts  package.json  tsconfig.json
driver/src/: cli.ts  evaluator.ts  loadWasm.ts  repl.ts
js-evaluator/: README.md  evaluator_week_10.js  index.js  index.ts  package.json  tsconfig.json
js-evaluator/src/: evaluator.ts  types.ts
lib-ir/: Cargo.toml
lib-ir/src/: ast.rs  lib.rs
lib-ir/src/ast/: arrow_function.rs  coerced_eq.rs  literal.rs  literal_value.rs  math.rs  mod.rs
parser/: .prettierrc  index.ts  package.json  tsconfig.json
rs-evaluator/: Cargo.toml
rs-evaluator/src/: closure.rs  constants.rs  environment.rs  evaluator.rs  evaluator_value.rs  js_value.rs  js_value_mapper.rs  lib.rs
sample_code/: conditional.js  functionCall.js  objectLiteral.js  print.js  ternary.js  variables.js
src/: getters.ts  primitives.ts  types.ts
