[package]
name = "rs-evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-ir = { path = "../lib-ir" }
serde_json = "1.0"
wasm-bindgen = "0.2.74"
js-sys = "0.3.59"

[lib]
crate-type = ["cdylib"]
